# Advent-of-Code-2023-in-C

./: .gitignore
src/day-01/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  input_reader.c  input_reader.h  lib.c  lib.h
src/lib/tests/: CMakeLists.txt  main.c  test_lib.c
